Start joint vs. multiple section

--- a/src/eco.bib
+++ b/src/eco.bib
@@ -7417,19 +7417,17 @@
 	year = {2023}
 }
 
-@book{VanderVaart1998,
-	abstract = {This book is an introduction to the field of asymptotic statistics. The treatment is both practical and mathematically rigorous. In addition to most of the standard topics of an asymptotics course, including likelihood inference, M-estimation, the theory of asymptotic efficiency, U-statistics, and rank procedures, the book also presents recent research topics such as semiparametric models, the bootstrap, and empirical processes and their applications. The topics are organized from the central idea of approximation by limit experiments, which gives the book one of its unifying themes. This entails mainly the local approximation of the classical i.i.d. set up with smooth parameters by location experiments involving a single, normally distributed observation. Thus, even the standard subjects of asymptotic statistics are presented in a novel way. Suitable as a graduate or Master's level statistics text, this book will also give researchers an overview of research in asymptotic statistics.},
-	address = {Cambridge},
-	author = {{Van der Vaart}, Aad},
-	booktitle = {Cambridge Series in Statistical and Probabilistic Mathematics},
-	doi = {DOI: 10.1017/CBO9780511802256},
-	isbn = {9780521784504},
-	mendeley-groups = {Random Useful Math/Probability/Limit Theorems},
-	publisher = {Cambridge University Press},
-	title = {{Asymptotic Statistics}}, 
-	year = {1998}
+@book{VanderVaart1998AsymptoticStatistics,
+  title = {Asymptotic {{Statistics}}},
+  author = {{Van der Vaart}, Aad},
+  year = 1998,
+  journal = {Cambridge Series in Statistical and Probabilistic Mathematics},
+  publisher = {Cambridge University Press},
+  address = {Cambridge},
+  doi = {DOI: 10.1017/CBO9780511802256},
+  abstract = {This book is an introduction to the field of asymptotic statistics. The treatment is both practical and mathematically rigorous. In addition to most of the standard topics of an asymptotics course, including likelihood inference, M-estimation, the theory of asymptotic efficiency, U-statistics, and rank procedures, the book also presents recent research topics such as semiparametric models, the bootstrap, and empirical processes and their applications. The topics are organized from the central idea of approximation by limit experiments, which gives the book one of its unifying themes. This entails mainly the local approximation of the classical i.i.d. set up with smooth parameters by location experiments involving a single, normally distributed observation. Thus, even the standard subjects of asymptotic statistics are presented in a novel way. Suitable as a graduate or Master's level statistics text, this book will also give researchers an overview of research in asymptotic statistics.},
+  isbn = {978-0-521-78450-4}
 }
-
 
 @article{Williamson1990,
 	abstract = {Probabilistic arithmetic involves the calculation of the distribution of arithmetic functions of random variables. This work on probabilistic arithmetic began as an investigation into the possibility of adapting existing numerical procedures (developed for fixed numbers) to handle random variables (by replacing the basic operations of arithmetic by the appropriate convolutions). The general idea is similar to interval arithmetic and fuzzy arithmetic. In this paper we present a new and general numerical method for calculating the appropriate convolutions of a wide range of probability distributions. An important feature of the method is the manner in which the probability distributions are represented. We use lower and upper discrete approximations to the quantile function (the quasi-inverse of the distribution function). This results in any representation error being always contained within the lower and upper bounds. This method of representation has advantages over other methods previously proposed. The representation fits in well with the idea of dependency bounds. Stochastic dependencies that arise within the course of a sequence of operations on random variables are the severest limit to the simple application of convolution algorithms to the formation of a general probabilistic arithmetic. We examine this dependency error and show how dependency bounds are a possible means of reducing its effect. Dependency bounds are lower and upper bounds on the distribution of a function of random variables that contain the true distribution even when nothing is known of the dependence of the random variables. They are based on the Fr{\'{e}}chet inequalities for the joint distribution of a set of random variables in terms of their marginal distributions. We show how the dependency bounds can be calculated numerically using our numerical representation of probability distributions. Examples of the methods developed are presented, and relationships with other work on numerically handling uncertainties are briefly described. {\textcopyright} 1990.},
